istio/dr-backend.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: backend
  namespace: click-tracker
spec:
  host: backend.click-tracker.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
