istio/dr-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend
  namespace: click-tracker
spec:
  host: frontend.click-tracker.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
